--- a/Diwen.Xbrl.Tests/data/AR-example.xhtml
+++ b/Diwen.Xbrl.Tests/data/AR-example.xhtml
@@ -514,9 +514,9 @@
 
 					</ix:hidden>
 					<ix:references>
-						<link:schemaref xlink:type="simple" xlink:href="http://xbrl.taxonomier.se/se/fr/gaap/k2/risbs/2021-10-31/se-k2-risbs-2021-10-31.xsd" />
-						<link:schemaref xlink:type="simple" xlink:href="http://xbrl.taxonomier.se/se/fr/gaap/coa/rplc/2020-12-01/se-coa-rplc-2020-12-01.xsd" />
-						<link:schemaref xlink:type="simple" xlink:href="http://xbrl.taxonomier.se/se/fr/misc/race/2017-09-30/se-misc-race-2017-09-30.xsd" />
+						<link:schemaRef xlink:type="simple" xlink:href="http://xbrl.taxonomier.se/se/fr/gaap/k2/risbs/2021-10-31/se-k2-risbs-2021-10-31.xsd" />
+						<link:schemaRef xlink:type="simple" xlink:href="http://xbrl.taxonomier.se/se/fr/gaap/coa/rplc/2020-12-01/se-coa-rplc-2020-12-01.xsd" />
+						<link:schemaRef xlink:type="simple" xlink:href="http://xbrl.taxonomier.se/se/fr/misc/race/2017-09-30/se-misc-race-2017-09-30.xsd" />
 					</ix:references>
 					<ix:resources>
 						<xbrli:context id="PERIOD0">
